# Donat-Ivliev-Framework

./: CMakeLists.txt  geometry.cpp  geometry.h  main.cpp  point.cpp  point.h  shape.h
